[package]
name = "untitled"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fancy-regex = "0.12.0"
num = { version = "0.4.1", features = [] }
regex = "1.10.2"
time = "0.3.30"
tap = "1.0.1"

[profile.release]
debug = 1

[profile.bench]
debug = true
